Issue CXDEVII-1743: Design change for the needed button (horizontal alignment of content text and button).

--- a/aegon-sass-library/components/_messages.scss
+++ b/aegon-sass-library/components/_messages.scss
@@ -56,8 +56,10 @@
       margin-bottom: 5px;
     }
     .content {
+      width: 100%;
       display: table;
       p {
+        padding-right: 20px;
         display: table-cell;
       }
       button {
